--- a/gb/22/9/16/n13826535.md
+++ b/gb/22/9/16/n13826535.md
@@ -1,54 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>低剂量电脑断层(LDCT)    早期侦测肺癌利器</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13826537-575508-600x400.jpg" />
 <h6>pointing up)低剂量电脑断层(LDCT)是目前唯一具国际实证，可以早期发现肺癌的筛检工具。（部苗栗医院 提供）
 </h6>
 <hr>
-<p>【大纪元2022年09月16日讯】（大纪元记者陈文敏台湾苗栗报导）部苗推出一条龙服务，方便乡亲参与<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%8D%E8%B4%B9%E7%AD%9B%E6%A3%80.md#1">免费筛检</a>。世界卫生组织指出，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%BA%E7%99%8C.md#1">肺癌</a>是全球癌症????死因第一位，而肺癌在台湾也已连续11年，高居国人<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%99%8C%E7%97%87%E6%AD%BB%E5%9B%A0.md#1">癌症死因</a>首位，民国109年共9,629人死于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%BA%E7%99%8C.md#1">肺癌</a>，占所有癌症死亡人数的五分之一（19.2%）。</p>
+<p>【大纪元2022年09月16日讯】（大纪元记者陈文敏台湾苗栗报导）部苗推出一条龙服务，方便乡亲参与免费筛检。世界卫生组织指出，肺癌是全球癌症????死因第一位，而肺癌在台湾也已连续11年，高居国人癌症死因首位，民国109年共9,629人死于肺癌，占所有癌症死亡人数的五分之一（19.2%）。</p>
 <p>卫福部苗栗医院为加强守护民众健康，特别配合卫福部国健署新推出的肺癌早期侦测计划，由癌症防治中心跨团队整合一条龙医疗服务，方便乡亲踊跃参与筛检。凡符合国健署免费肺癌筛检资格的民众，可事先洽询癌症筛检服务柜台(设置于门诊大厅，电话：037-261920转2181)，以利由专人协助安排受检。</p>
 <figure id="13826536" aria-describedby="caption-13826536" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/09/id13826536-575507-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/09/id13826536-575507-450x338.jpg" alt="部苗配合国健署肺癌早期侦测计划，于癌症筛检服务台新增肺癌筛检一条龙便捷服务." width="500" /></a><figcaption id="caption-13826536" class="wp-caption-text">部苗配合国健署肺癌早期侦测计划，于癌症筛检服务台新增肺癌筛检一条龙便捷服务.（部苗栗医院提供）</figcaption></figure>
-<p>卫福部国民健康署鉴于肺癌个案的死亡率高，存活率低，主要与诊断的期别有关，而<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%8E%E5%89%82%E9%87%8F.md#1">低剂量</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%B5%E8%84%91%E6%96%AD%E5%B1%82.md#1">电脑断层</a>(LDCT)是目前唯一具国际实证，可以早期发现肺癌的筛检工具，能降低重度吸烟者20%肺癌死亡率，因此今年7月新推出试办“早期肺癌筛检计划”，服务对象资格为有下列任一肺癌风险因子且具健保身份之民众，每2年1次低剂量电脑断层(LDCT)肺癌筛检。一、具肺癌家族史：50至74岁男性或45至74岁女性，且其父母、子女或兄弟姊妹经诊断为肺癌之民众。二、重度吸烟史：50至74岁吸烟史达30包-年以上，有意愿戒烟或戒烟未达15年之重度吸烟者。</p>
+<p>卫福部国民健康署鉴于肺癌个案的死亡率高，存活率低，主要与诊断的期别有关，而低剂量电脑断层(LDCT)是目前唯一具国际实证，可以早期发现肺癌的筛检工具，能降低重度吸烟者20%肺癌死亡率，因此今年7月新推出试办“早期肺癌筛检计划”，服务对象资格为有下列任一肺癌风险因子且具健保身份之民众，每2年1次低剂量电脑断层(LDCT)肺癌筛检。一、具肺癌家族史：50至74岁男性或45至74岁女性，且其父母、子女或兄弟姊妹经诊断为肺癌之民众。二、重度吸烟史：50至74岁吸烟史达30包-年以上，有意愿戒烟或戒烟未达15年之重度吸烟者。</p>
 <p>部苗院长李明辉医师表示，肺癌筛检是国健署目前提供的免费四癌（子宫颈癌、乳癌、口腔癌、大肠癌）筛检之外，新推出的第五癌筛检。苗医为落实防癌政策，今年特别在门诊大厅设置四癌筛检服务站，方便民众参与，已获得许多就医者肯定且配合接受筛检，现今筛检站亦响应国健署新计划，增加了肺癌筛检服务。</p>
-<p>李院长进一步说明，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BD%8E%E5%89%82%E9%87%8F.md#1">低剂量</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%B5%E8%84%91%E6%96%AD%E5%B1%82.md#1">电脑断层</a>(LDCT)肺癌筛检是非侵入性检查，受检者接受的放射线辐射量，比传统胸部电脑断层检查更低，民众无需太担忧。李院长呼吁苗栗乡亲，除了运动、饮食均衡及生活作息正常外，也应该定期接受国民健康署癌症筛检服务，透过早期筛检，若发现阳性异常，可及时接受正规医疗处置，早期发现癌症并接受治疗，预后效果佳。</p>
+<p>李院长进一步说明，低剂量电脑断层(LDCT)肺癌筛检是非侵入性检查，受检者接受的放射线辐射量，比传统胸部电脑断层检查更低，民众无需太担忧。李院长呼吁苗栗乡亲，除了运动、饮食均衡及生活作息正常外，也应该定期接受国民健康署癌症筛检服务，透过早期筛检，若发现阳性异常，可及时接受正规医疗处置，早期发现癌症并接受治疗，预后效果佳。</p>
 <p>责任编辑：林勤芝</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/29/n13769973.md#1">7/1起“LDCT肺癌筛检计划”启动 适用两类人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/13/n13779744.md#1">肺癌筛检计划 桃园医院号召民众善用资源</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/15/n13781622.md#1">【健康1+1】1类人超过93%不吸烟也得肺癌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/5/n13796032.md#1">野火会使加州人患肺癌的风险更高吗?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/26/n13810886.md#1">逾半肺癌患者初诊已癌末 医吁45岁应筛检</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13816407.md#1">天普健康推出创新计划 普及肺癌筛查与治疗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127181.md#1">“印象苗医摄影、绘画比赛”表达爱心捕捉幸福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127117.md#1">大湖草莓季来临！ 县长采果乐 行销观光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126368.md#1">三高中年男性烟酒史背后藏肿瘤 分级转诊医疗救命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126373.md#1">台湾客家八音戏曲推广中心 开始营运</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/29/n13769973.md#1">7/1起“LDCT肺癌筛检计划”启动 适用两类人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/13/n13779744.md#1">肺癌筛检计划 桃园医院号召民众善用资源</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/15/n13781622.md#1">【健康1+1】1类人超过93%不吸烟也得肺癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/5/n13796032.md#1">野火会使加州人患肺癌的风险更高吗?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/26/n13810886.md#1">逾半肺癌患者初诊已癌末 医吁45岁应筛检</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/2/n13816407.md#1">天普健康推出创新计划 普及肺癌筛查与治疗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273862.md#1">等待250天！ 鲤鱼潭水库出现锯齿堰溢流瀑布</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273902.md#1">部苗补助员工肺癌筛检 提供乡亲便捷癌筛服务台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273852.md#1">113年度苗栗市暑期防溺河川巡防队成立</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273845.md#1">头份市社区营造计划 发掘客家宝藏 体验好客生活</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/4/n11163148.md#1" target="_blank">医生见证人病人重生的神奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/15/n11261433.md#1" target="_blank">王维洛：孙越崎，学生领袖、煤油大王与三峡工程反对派的重要领军人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/11/n10706291.md#1" target="_blank">波兰中欧经济论坛 政要签名支持控告江泽民</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14120496.md#1">隐藏500年 米开朗基罗人体素描密室对外开放</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/24/n14123474.md#1">【未解之谜】诸葛八阵图之谜（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120801.md#1">【古道人生】一个乞讨要饭的女子成了大国夫人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122398.md#1">吴王夫差亡国有预兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/24/n14123533.md#1">不只有青梅竹马 藏在长干里的爱情故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126705.md#1">【菁英论坛】上海出大事？三中全会开不成</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125441.md#1">【未解之谜】瘟疫绕道的两个村庄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126417.md#1">【环球直击】涉嫌为中共收集情报 澳洲男被起诉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14124780.md#1">【秦鹏观察】中国房地产再崩 中南海急推25条</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125988.md#1">中国经济低迷 年轻人兴起购廉价军大衣御寒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125924.md#1">习家族涉中国电动车生意 中欧争议更复杂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14125331.md#1">中共封杀下 黄骥执导《石门》获金马最佳影片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125982.md#1">朱丹自曝被好友骗光积蓄 教训出自在纸上签字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14125289.md#1">女星篠崎泫挑战跳澳门塔 脖子脸部微血管爆裂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125997.md#1">连续5年亏损 香港TVB宣布再裁300人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14125259.md#1">主持金马奖表现亮眼 Lulu曝黄子佼协助内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/26/n14124659.md#1">天冷来一碗 味噌汤防癌减肥 这时间喝好处更多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/22/n14121481.md#1">有口臭？可能是身体在求救 中医4方法除口臭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/27/n14125127.md#1">日本科学家成功研制新药 可刺激新牙生长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125590.md#1">人真的会笑死吗？ 医生这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/26/n14124516.md#1">不知不觉糖上瘾？代谢科医师教你控糖5妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272135.md#1">长大的女孩：法度加入神韵的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268258.md#1">【古道人生】地师为富家卜穴 为何最终给了佃户之子？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267444.md#1">德不配位必有危 宝马也需有德人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/23/n14232452.md#1">【古韵流芳】闺阁世界的奇伟之才——沈善宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273708.md#1">【时事金扫描】乌军攻克里米亚？普京访朝异常</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270972.md#1">【百年真相】中共一再被俄总统普京打脸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272757.md#1">中国富豪流失全球居首 大多移民哪四国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272482.md#1">三中全会前要全党噤声 分析指中共岌岌可危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272172.md#1">宣传片被拍得脸歪嘴斜 胡歌不禁公开吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272141.md#1">甄子丹动作替身张磊因心脏病猝逝 终年39岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272210.md#1">安洁莉娜裘莉盛装走红毯 15岁小女儿紧相随</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272917.md#1">陆第一网红冯提莫癌症痊愈 自曝还有5种病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273702.md#1">演唱会被投诉唱粤语歌 张学友：我来自香港</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271835.md#1">这一物可以让脏袜子变白 非白醋或小苏打粉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272483.md#1">日本作家谈文化差异 一个地名让台湾人笑翻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273234.md#1">人死时大脑会发生什么事？ 医生这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271007.md#1">桑叶茶是长寿茶 清肺祛肝火 3类人不宜多喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271291.md#1">长时间戴降噪和无线耳机 是如何损害听力的</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/16/n13826535.htm">低剂量电脑断层(LDCT)    早期侦测肺癌利器</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/16/n13826535.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/16/n13826535.htm">低剂量电脑断层(LDCT)    早期侦测肺癌利器</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/16/n13826535.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
